    from mmCIF PDB files. Before, OST would turn secondary structure 'EEH'
    into 'ECH' to make it look nicer in DNG. Now, 'EEH' stays 'EEH'.
  * Added Molck API to the ost.mol.alg module.
  * Extended lDDT API in ost.mol.alg module to reproduce functionality of lddt
    binary.
  * Added `actions` interface including one action to compare structures.

Changes in Release 1.7.1
--------------------------------------------------------------------------------

  * Fixed an issue that could cause the star format parser (mmCIF, chemical
    components dictionary) to enter an infinite loop
  * Chemical components dictionary was extended by new chemical classes
    introduced by PDB
  * Fixed unit tests
  * Improved documentation

Changes in Release 1.7.0
--------------------------------------------------------------------------------

  * Removed Qt dependency for non-GUI compilation and fixed issues with recent
    gcc and boost versions
  * Added Quaternary Structure (QS) scoring module
  * Fixed mmCIF parser to work with mmCIF dictionary version 5 (now with useful
    revision data) and add r_free, r_work and entity.id to MMCifInfo
  * Added fast accessibility and secondary structure (mimicking naccess & dssp)
    computation (Accessibility & AssignSecStruct in mol.alg)
  * Changed behaviour of mol.alg.Superpose with match = 'local-aln' or
    'global-aln' which used to fail for chains without peptide bonds (e.g.
    CA-only)
  * Large updates for documentation
  * Several minor bug fixes, improvements, and speed-ups

Changes in Release 1.6.0
--------------------------------------------------------------------------------

  * Added code to compare structures attached to a multiple seq. aln.
  * Incorporated Antechamber based force-field parameter generation for mm mod.

Changes in Release 1.5.0
--------------------------------------------------------------------------------

  * Added binding to 3DComb (structural alignment)